syntax = "proto3";

package phoenix.common.v1;

option go_package = "github.com/phoenix-vnext/platform/packages/contracts/proto/v1;v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// Common error details
message ErrorDetail {
  string code = 1;
  string message = 2;
  map<string, string> metadata = 3;
}

// Pipeline stage represents a single stage in the OTel pipeline
message PipelineStage {
  string id = 1;
  string type = 2; // receiver, processor, exporter
  string name = 3;
  map<string, string> config = 4;
  repeated string connections = 5; // IDs of connected stages
}

// Pipeline configuration
message Pipeline {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated PipelineStage stages = 4;
  map<string, string> metadata = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Metric data point
message MetricPoint {
  double value = 1;
  google.protobuf.Timestamp timestamp = 2;
  map<string, string> labels = 3;
}

// Time series data
message TimeSeries {
  string metric_name = 1;
  repeated MetricPoint points = 2;
  map<string, string> metadata = 3;
}

// Cost breakdown
message CostBreakdown {
  double total_cost = 1;
  double compute_cost = 2;
  double storage_cost = 3;
  double network_cost = 4;
  map<string, double> custom_costs = 5;
}

// Resource utilization
message ResourceUtilization {
  double cpu_percentage = 1;
  double memory_percentage = 2;
  double disk_percentage = 3;
  double network_bandwidth_mbps = 4;
}

// Health status
enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_DEGRADED = 2;
  HEALTH_STATUS_UNHEALTHY = 3;
}

// Component health
message ComponentHealth {
  string component_id = 1;
  string component_type = 2;
  HealthStatus status = 3;
  string message = 4;
  google.protobuf.Timestamp checked_at = 5;
}

// Pagination request
message PaginationRequest {
  int32 page_size = 1;
  string page_token = 2;
}

// Pagination response
message PaginationResponse {
  string next_page_token = 1;
  int32 total_items = 2;
}